# docker-remote-sync

./: LICENSE  Readme.md  pyproject.toml  setup.py
.fish-functions/: run.fish
.scripts/: release
drsync/: __main__.py  config.py  docker.py  docker_interface.py  drsync.py  io_util.py  remote.py  subprocess_utils.py  sync.py
