[tool.poetry]
name = "docker-remote-sync"
version = "0.5.0"
description = "Utility to sync updated docker layers between 2 docker host machines"
authors = ["Vamsi Talupula <tanavamsikrishna@outlook.com>"]
readme = "Readme.md"
repository = "https://github.com/tanavamsikrishna/docker-remote-sync"
packages = [{ include = "drsync" }]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
fabric = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker-remote-sync = "drsync.__main__:main"
