[project]
name = "docker-remote-sync"
version = "0.7.0"
description = "Utility to sync docker image between 2 docker host machines"
authors = [{ name = "Vamsi Talupula", email = "tanavamsikrishna@outlook.com" }]
requires-python = "~=3.12"
readme = "Readme.md"
dependencies = [
    "colorama",
    "fabric",
]

[project.urls]
Repository = "https://github.com/tanavamsikrishna/docker-remote-sync"

[project.scripts]
docker-remote-sync = "drsync.__main__:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.sdist]
include = ["drsync"]

[tool.hatch.build.targets.wheel]
include = ["drsync"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
